@@ -1,8 +1,12 @@
 package ru.digital.league.x5.sign.bindings.data;
 
+import org.assertj.core.util.Lists;
 import ru.digital.league.x5.sign.bindings.db.entity.ClusterEmployeeEntity;
 import ru.digital.league.x5.sign.bindings.dto.ClusterEmployeeDto;
 import ru.digital.league.x5.sign.bindings.dto.ClusterEmployeeListDto;
+import ru.digital.league.x5.sign.bindings.xml.model.ClusterEmployee;
+import ru.digital.league.x5.sign.bindings.xml.model.ClusterEmployeeBinding;
+import ru.digital.league.x5.sign.bindings.xml.model.ClusterEmployeeList;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -10,109 +14,76 @@ import java.util.List;
 
 public class ClusterEmployeeData {
 
-    // dto list
-    public static ClusterEmployeeListDto clusterEmployeeListDto() {
-        List<ClusterEmployeeDto> clusterEmployeeDtoList = Arrays.asList(clusterEmployeeDto1(), clusterEmployeeDto2());
-        return ClusterEmployeeListDto.builder()
-                .clusterEmployeeBindingList(clusterEmployeeDtoList)
-                .build();
+    public static ClusterEmployeeList clusterEmployeeList() {
+        ClusterEmployeeList clusterEmployeeList = new ClusterEmployeeList();
+        clusterEmployeeList.setClusterEmployeeBindingList(List.of(clusterEmployeeBindingCorrectValue()));
+        return clusterEmployeeList;
     }
 
-    public static ClusterEmployeeListDto clusterEmployeeListDto_forFilter() {
-        List<ClusterEmployeeDto> clusterEmployeeDtoList = Arrays.asList(clusterEmployeeDto1(), clusterEmployeeDto3());
-        return ClusterEmployeeListDto.builder()
-                .clusterEmployeeBindingList(clusterEmployeeDtoList)
-                .build();
+    public static ClusterEmployeeList emptyClusterEmployeeList() {
+        ClusterEmployeeList clusterEmployeeList = new ClusterEmployeeList();
+        clusterEmployeeList.setClusterEmployeeBindingList(List.of(emptyClusterEmployeeBinding()));
+        return clusterEmployeeList;
     }
 
-    public static ClusterEmployeeListDto emptyClusterEmployeeListDto() {
-        return ClusterEmployeeListDto.builder()
-                .clusterEmployeeBindingList(Collections.emptyList())
-                .build();
+    public static ClusterEmployeeList clusterEmployeeListWithInvalidValue() {
+        ClusterEmployeeList clusterEmployeeList = new ClusterEmployeeList();
+        clusterEmployeeList.setClusterEmployeeBindingList(List.of(clusterEmployeeBindingWithInvalidValue()));
+        return clusterEmployeeList;
     }
 
-    public static ClusterEmployeeListDto clusterEmployeeWithoutNOO() {
-        List<ClusterEmployeeDto> clusterEmployeeDtoList = Arrays.asList(clusterEmployeeDto3());
-        return ClusterEmployeeListDto.builder()
-                .clusterEmployeeBindingList(clusterEmployeeDtoList)
-                .build();
+    public static ClusterEmployeeList clusterEmployeeListWithInvalidValue_and_CorrectValue(){
+        ClusterEmployeeList clusterEmployeeList = new ClusterEmployeeList();
+        clusterEmployeeList.setClusterEmployeeBindingList(List.of(clusterEmployeeBindingWithInvalidValue(), clusterEmployeeBindingCorrectValue()));
+        return clusterEmployeeList;
     }
 
-    public static ClusterEmployeeListDto clusterEmployeeWithEmptyPersonalNUmber() {
-        List<ClusterEmployeeDto> clusterEmployeeDtoList
-                = Arrays.asList(clusterEmployeeDto_nullPersonalNumber(), clusterEmployeeDto_blankPersonalNumber());
-        return ClusterEmployeeListDto.builder()
-                .clusterEmployeeBindingList(clusterEmployeeDtoList)
-                .build();
+    public static ClusterEmployeeBinding clusterEmployeeBindingCorrectValue() {
+        ClusterEmployeeBinding clusterEmployeeBinding = new ClusterEmployeeBinding();
+        clusterEmployeeBinding.setClusterId("0000");
+        clusterEmployeeBinding.setClusterEmployeeList(List.of(clusterEmployee1CorrectValue()));
+        return clusterEmployeeBinding;
     }
 
-    // dto
-    private static ClusterEmployeeDto clusterEmployeeDto1() {
-        return ClusterEmployeeDto.builder()
-                .clusterId("8888")
-                .role("Начальник отдела операций")
-                .personalNumber("961135")
-                .personalLogin("EKATERINA.PARUBOK")
-                .positionId(50000566L)
-                .positionName("Начальник отдела операций")
-                .linkedPersonalNumber("098123")
-                .build();
+    public static ClusterEmployeeBinding clusterEmployeeBindingWithInvalidValue() {
+        ClusterEmployeeBinding clusterEmployeeBinding = new ClusterEmployeeBinding();
+        clusterEmployeeBinding.setClusterId("0000");
+        clusterEmployeeBinding.setClusterEmployeeList(List.of(clusterEmployee1PersonalNumberNull()));
+        return clusterEmployeeBinding;
     }
 
-    private static ClusterEmployeeDto clusterEmployeeDto2() {
-        return ClusterEmployeeDto.builder()
-                .clusterId("7777")
-                .role("Начальник отдела операций")
-                .personalNumber("323445")
-                .personalLogin("ILYA.MADDYSON")
-                .positionId(50000566L)
-                .positionName("Начальник отдела операций")
-                .build();
+    public static ClusterEmployeeBinding emptyClusterEmployeeBinding() {
+        ClusterEmployeeBinding clusterEmployeeBinding = new ClusterEmployeeBinding();
+        clusterEmployeeBinding.setClusterId("0000");
+        clusterEmployeeBinding.setClusterEmployeeList(Lists.emptyList());
+        return clusterEmployeeBinding;
     }
 
-    private static ClusterEmployeeDto clusterEmployeeDto3() {
-        return ClusterEmployeeDto.builder()
-                .clusterId("7777")
-                .role("Начальник отдела развития")
-                .personalNumber("323445")
-                .personalLogin("IVAN.KUPALA")
-                .positionId(50000567L)
-                .positionName("Начальник отдела развития")
-                .build();
+    public static ClusterEmployee clusterEmployee1CorrectValue() {
+        ClusterEmployee clusterEmployee = new ClusterEmployee();
+        clusterEmployee.setRole("Начальник отдела операций");
+        clusterEmployee.setPersonalNumber("961135");
+        clusterEmployee.setPersonalLogin("EKATERINA.PARUBOK");
+        clusterEmployee.setPositionId(50000566L);
+        clusterEmployee.setPositionName("Начальник отдела операций");
+        clusterEmployee.setLinkedPersonalNumber("098123");
+        return clusterEmployee;
     }
 
-    /**
-     * Специальный bean в котором все поля кроме clusterId равны нулю
-     * Такие объекты присылает MDM, записывать их в БД не имеет смысла
-     */
-    private static ClusterEmployeeDto clusterEmployeeDto_nullPersonalNumber() {
-        return ClusterEmployeeDto.builder()
-                .clusterId("0000")
-                .build();
+    public static ClusterEmployee clusterEmployee1PersonalNumberNull() {
+        ClusterEmployee clusterEmployee = new ClusterEmployee();
+        clusterEmployee.setRole("Начальник отдела операций");
+        clusterEmployee.setPersonalNumber(null);
+        clusterEmployee.setPersonalLogin("EKATERINA.PARUBOK");
+        clusterEmployee.setPositionId(50000566L);
+        clusterEmployee.setPositionName("Начальник отдела операций");
+        clusterEmployee.setLinkedPersonalNumber("098123");
+        return clusterEmployee;
     }
 
-    private static ClusterEmployeeDto clusterEmployeeDto_blankPersonalNumber() {
-        return ClusterEmployeeDto.builder()
-                .clusterId("0000")
-                .personalNumber("")
-                .build();
-    }
-
-    // entityList
-    public static List<ClusterEmployeeEntity> clusterEmployeeEntityList1() {
-        ClusterEmployeeEntity ee1 = clusterEmployeeEntity1();
-        return List.of(ee1);
-    }
-
-    public static List<ClusterEmployeeEntity> clusterEmployeeEntityList_forFilter() {
-        ClusterEmployeeEntity ee1 = clusterEmployeeEntity1();
-        return List.of(ee1);
-    }
-
-    // entity
     private static ClusterEmployeeEntity clusterEmployeeEntity1() {
         ClusterEmployeeEntity cee = new ClusterEmployeeEntity();
-        cee.setClusterId("8888");
+        cee.setClusterId("0000");
         cee.setRole("Начальник отдела операций");
         cee.setPersonalNumber("098123");
         cee.setPersonalLogin("EKATERINA.PARUBOK");
@@ -122,4 +93,8 @@ public class ClusterEmployeeData {
         return cee;
     }
 
+    public static List<ClusterEmployeeEntity> clusterEmployeeEntityList1() {
+        ClusterEmployeeEntity ee1 = clusterEmployeeEntity1();
+        return List.of(ee1);
+    }
 }
